# artix-iso-util

./: .gitignore  README.md  bai.sh  pyproject.toml
src/artixisoutil/: __init__.py  artools.py  configs.py  logger.py  pacman.py
