[project]
name = "artix-iso-util"
description = "Simple tool for easier artix iso building + custom profile support"
version = "0.0.5"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["util", "cli", "artix", "iso"]
license = { file = "LICENSE" }

authors = [
    { name = "LowByteNeko", email = "lowbyteneko@gmail.com" }
]
maintainers = [
    { name = "LowByteNeko", email = "lowbyteneko@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/LowByteNeko/artix-iso-util"

[project.scripts]
artixisoutil = "artixisoutil:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
